tests/data/placebo/test_sagemaker_notebook_security_group_filter/api.sagemaker.ListTags_1.json
{
    "status_code": 200, 
    "data": {
        "ResponseMetadata": {
            "RetryAttempts": 0, 
            "HTTPStatusCode": 200, 
            "RequestId": "c40afd2d-6dd8-4100-8a28-ddc7671dacf1", 
            "HTTPHeaders": {
                "date": "Thu, 10 May 2018 15:23:12 GMT", 
                "x-amzn-requestid": "c40afd2d-6dd8-4100-8a28-ddc7671dacf1", 
                "content-length": "47", 
                "content-type": "application/x-amz-json-1.1", 
                "connection": "keep-alive"
            }
        }, 
        "Tags": [
            {
                "Value": "c7n-test-nb", 
                "Key": "Name"
            }
        ]
    }
}
