tests/data/placebo/test_sagemaker_notebook_security_group_filter/ec2.DescribeSecurityGroups_1.json
{
  "status_code": 200,
  "data": {
    "SecurityGroups": [
      {
        "IpPermissionsEgress": [
          {
            "IpProtocol": "-1",
            "PrefixListIds": [],
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "UserIdGroupPairs": [],
            "Ipv6Ranges": []
          }
        ],
        "Description": "Storage GW SG",
        "IpPermissions": [
          {
            "PrefixListIds": [],
            "FromPort": 2049,
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "ToPort": 2049,
            "IpProtocol": "tcp",
            "UserIdGroupPairs": [],
            "Ipv6Ranges": []
          }
        ],
        "GroupName": "SGW-SG",
        "VpcId": "vpc-d2d616b5",
        "OwnerId": "644160558196",
        "GroupId": "sg-ac538cd9"
      }
    ],
    "ResponseMetadata": {}
  }
}
